--- a/app/assets/stylesheets/pages/items.css.sass
+++ b/app/assets/stylesheets/pages/items.css.sass
@@ -3,8 +3,19 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body
   .container
+    table
+      tr
+        td
+          ul
+            :list-style-type none
+            li
+              img
     form#edit_items
+      .span12
+        :margin-top 40px
       ul
+        :margin 0px
+        :padding 0px
         :list-style-type none
       div#container
         div.caroussel
