--- a/app/views/items/index.haml
+++ b/app/views/items/index.haml
@@ -13,11 +13,14 @@
     - @items.each do |item|
       %tr
         %td
-          %ul.grid.row-fluid
-            %li.span4
-              = image_tag(item.pictures.where(:position => 0..1).first.picture.url)
-            %li.span8
-              = item.title
+          - unless item.pictures.nil? || item.pictures.empty?
+            %ul.grid.row-fluid
+              %li.span4
+                = image_tag(item.pictures.where(:position => 0..1).first.picture.url)
+              %li.span8
+                = item.title
+          - else
+            = item.title
         %td
           = link_to(t("common_sentence.edit"), "/#/items/#{item.id}/edit", class: "btn btn-primary")
         %td
