--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/edit.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/edit.haml.jst.ejs
@@ -1,6 +1,7 @@
-%form#edit_contact
-  %div.actions
-    %fieldset
-    %p
-      %input{type: "submit", value: translate.common_button.submit}
+%div.row-fluid
+  %form#edit_contact
+    %div.actions
+      %fieldset
+      %p.span12
+        %input.btn.btn-success{type: "submit", value: translate.common_button.submit}
 
