update version add link killbills

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,6 +18,8 @@
           = link_to(t("contacts.contact_lists"), "/#/contacts")
         %li.span2
           = link_to(t("items.new_item"), "/#/items/new")
+        %li.span2
+          = link_to(t("killbills.lending_money"), "http://killbills.me/") 
 
       %div.span1
         %ul
