update version kukariri add tablesorter for all table

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/index.haml.jst.ejs
@@ -20,3 +20,4 @@
           = contact.lastname
         %td
           = contact.firstname
+%script{type: "text/javascript", src: "/assets/rails/items.js"}
