update version kukariri backbonejs add countries for all form

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/no_contact.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/no_contact.haml.jst.ejs
@@ -1,2 +1,1 @@
-= "Il n'y a pas de contact enregistré, pour ajouter un contact cliquer ici : "
-%a{href: link, title: "add new contact"} = "Add new contact"
+%a.btn.btn-large.btn-danger{href: link, title: translate.contacts.add_new_contact} = translate.contacts.add_new_contact
