update version kukariri import vcf in contacts

--- a/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/create.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/create.haml.jst.ejs
@@ -1,3 +1,3 @@
-%form#add_vcf_cart_to_contact
-  #uploader
-    %p = "You browser doesn't have Flash, Silverlight, Gears, BrowserPlus or HTML5 support."
+#uploader
+  %p = "You browser doesn't have Flash, Silverlight, Gears, BrowserPlus or HTML5 support."
+%span#add_vcf_cart_to_contact = "Retourner à la page des contacts"
