--- a/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/link_to_export_vcf_to_contacts.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/link_to_export_vcf_to_contacts.haml.jst.ejs
@@ -1,2 +1,2 @@
-%li
+%li.span6
   %a.btn.btn-large.btn-danger.export_vcf_to_contacts{href: "/#/vcf_to_contacts", title: "Export vcf card to contacts"} = "Export vcf card to contacts"
