--- a/app/assets/stylesheets/pages/contacts.css.sass
+++ b/app/assets/stylesheets/pages/contacts.css.sass
@@ -1,3 +1,10 @@
 // Place all the styles related to the contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+section.container
+  ul
+    :margin 0px
+    :padding 0px
+    :list-style-type none
+    li
+      :margin-right 10%
