updte version kukariri backbonejs css

--- a/app/assets/stylesheets/pages/contacts.css.sass
+++ b/app/assets/stylesheets/pages/contacts.css.sass
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 section.container
-  ul
+  ul.admin_contact
     :margin 0px
     :padding 0px
     :list-style-type none
