update version kukariri layout

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,23 +8,24 @@
     - if protect_against_forgery?
       %meta{:content => u(cookies[Rails.application.config.session_options[:key]]), :name => "session-key-value"}
   %body.container-fluid
-    %section.header
-      %ul.span11
-        %li.span2
-          = link_to(t("items.items_list"), items_path)
-        %li.span2
-          = link_to(t("contacts.new_contact"), "/#/contacts/new")
-        %li.span2
-          = link_to(t("contacts.contact_lists"), "/#/contacts")
-        %li.span2
-          = link_to(t("items.new_item"), "/#/items/new")
-        %li.span2
-          = link_to(t("killbills.lending_money"), "http://killbills.me/") 
+    - if current_user
+      %section.header
+        %ul.span11
+          %li.span2
+            = link_to(t("items.items_list"), items_path)
+          %li.span2
+            = link_to(t("contacts.new_contact"), "/#/contacts/new")
+          %li.span2
+            = link_to(t("contacts.contact_lists"), "/#/contacts")
+          %li.span2
+            = link_to(t("items.new_item"), "/#/items/new")
+          %li.span2
+            = link_to(t("killbills.lending_money"), "http://killbills.me/") 
 
-      %div.span1
-        %ul
-          %li
-            = link_to(t("layout.logout"), destroy_user_session_path)
+        %div.span1
+          %ul
+            %li
+              = link_to(t("layout.logout"), destroy_user_session_path)
 
     %section.notice
       %ul
