update version kukariri google calendar export

--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/no_contact.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/no_contact.haml.jst.ejs
@@ -1,2 +1,2 @@
-%li
+%li{class: span}
   %a.btn.btn-large.btn-danger{href: link, title: translate.contacts.add_new_contact} = translate.contacts.add_new_contact
