--- a/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/link_to_export_vcf_to_contacts.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/vcf_to_contacts/link_to_export_vcf_to_contacts.haml.jst.ejs
@@ -1,2 +1,4 @@
-%li.span6
-  %a.btn.btn-large.btn-danger.export_vcf_to_contacts{href: "/#/vcf_to_contacts", title: "Export vcf card to contacts"} = "Export vcf card to contacts"
+%li{class: span}
+  %a.btn.btn-large.btn-danger.export_vcf_to_contacts{href: "/#/vcf_to_contacts", title: "Export vcf card to contacts"} = translate.contacts.export_vcf_to_contacts
+%li{class: span}
+  %a.btn.btn-large.btn-danger.export_vcf_to_contacts{href: "/#/google_contacts_to_contacts", title: "Export vcf card to contacts"} = translate.contacts.export_google_contact_to_contacts
