update version .fix error cam

--- a/app/assets/javascripts/kukariri_backbonejs/templates/pictures/photos/show.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/pictures/photos/show.haml.jst.ejs
@@ -1,4 +1,4 @@
 %video{id: "video", width: 640, height: 480,  autoplay: "true"}
-%button{id: "snap" }
+%span#snap.btn.btn-info
   = translate.pictures.photos.take_photo
 %canvas{id: "canvas", width: "640", height: "480"}
