update version kukariri bckbonejs add loader

--- a/app/assets/stylesheets/pages/notice.css.sass
+++ b/app/assets/stylesheets/pages/notice.css.sass
@@ -1,4 +1,10 @@
 section.notice
-  :background-color #CCFFCC
+  :margin-top 70px
   :display none
+  ul
+    :background-color #CCFFCC
+    :display none
+  div#loader
+    :text-align center
+    :display none
 
