--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,6 +29,8 @@
 
     %section.notice
       %ul
+      #loader
+        = image_tag('pictures/ajax_loader/ajax-loader.gif')
 
     %section.container.container-fluid
       = yield
