update version kukariri backbonejs .fix delete

--- a/app/views/items/index.haml
+++ b/app/views/items/index.haml
@@ -26,7 +26,7 @@
           %td
             = link_to(t("common_sentence.edit"), "/#/items/#{item.id}/edit", class: "btn btn-primary")
           %td
-            = link_to(t("common_sentence.delete"), "/#/items/#{item.id}", method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger")
+            = link_to(t("common_sentence.delete"), item, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger")
 - else
   = t("items.empty.items_empty")
 
