--- a/app/assets/javascripts/kukariri_backbonejs/templates/friends/index.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/friends/index.haml.jst.ejs
@@ -1,19 +1,25 @@
 %h1
   = "Suggestions d'amis"
-%table{border: 1}
+%table.table
   %tr
     %th
       = "E-mail de l'ami suggèrer"
     %th
       = "Annuler"
     %th
-      = "Le suivre"
-    %th 
       = "Ajouter en tant qu'ami"
+    %th 
+      = "Le suivre"
   :each contact in contacts
     %tbody
       %tr
         %td = contact.user.email
-        %td{class: "cancel_friend", id: "cancel_friend_"+contact.user.id} = "Annuler"
-        %td{class: "add_friend", id: "add_friend_"+contact.user.id} = "Ajouter en tant qu'ami"
-        %td{class: "follow_person", id: "follow_person_"+contact.user.id} = "Suivre uniquement cette personne"
+        %td{class: "cancel_friend", id: "cancel_friend_"+contact.user.id} 
+          %span.btn.btn-danger
+            = "Annuler"
+        %td{class: "add_friend", id: "add_friend_"+contact.user.id} 
+          %span.btn.btn-primary
+            = "Ajouter en tant qu'ami"
+        %td{class: "follow_person", id: "follow_person_"+contact.user.id}
+          %span.btn.btn-success
+            = "Suivre uniquement cette personne"
