--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,7 +18,7 @@
           %li.span2
             = link_to(t("contacts.contact_lists"), "/#/contacts")
           %li.span2
-            = link_to(t("items.new_item"), "/#/items/new")
+            = link_to(t("items.new_item"), "/#/users/#{current_user.login}/items/new")
           %li.span2
             %ul{:class => "nav", :role => "navigation"}
               %li.dropdown
