--- a/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_no_item.haml.jst.ejs
+++ b/app/assets/javascripts/kukariri_backbonejs/templates/contacts/_contact_edit_delete_no_item.haml.jst.ejs
@@ -1,6 +1,6 @@
 %td
-  %a.btn.btn-primary{href: "#/contacts/"+contact.id+"/edit"}
+  %a.btn.btn-primary{href: "#/users/"+login_id+"/contacts/"+contact.id+"/edit"}
     = translate.contacts.index.edit
 %td
-  %a.btn.btn-danger{href: "#/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: translate.common_sentence.confirm_delete}
+  %a.btn.btn-danger{href: "#/users/"+login_id+"/contacts/"+contact.id+"/delete", rel: "nofollow", data-confirm: translate.common_sentence.confirm_delete}
     = translate.contacts.index.destroy
